// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceLocation renders empty 1`] = `<span />`;

exports[`ConferenceLocation renders with city and country 1`] = `
<span>
  Geneva
  , 
  Switzerland
</span>
`;

exports[`ConferenceLocation renders with only city 1`] = `
<span>
  Geneva
</span>
`;

exports[`ConferenceLocation renders with only country 1`] = `
<span>
  Switzerland
</span>
`;
